--- a/main.css
+++ b/main.css
@@ -68,18 +68,17 @@ p {
 
 /* Background image styling */
 .background {
-    position: fixed; /* Makes the image fixed behind everything */
+    position: absolute; /* absolute로 변경 */
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('./benji_bg.png'); /* Replace with your image */
-    background-size: auto 100%;
+    background-image: url('./benji_bg.png');
+    background-size: auto 100%; /* 이미지의 비율 유지 */
     background-position: right;
-    background-repeat: no-repeat; /* Prevent repetition */
-    background-attachment: fixed; /* Keep the background static while scrolling */
-    z-index: -2; /* Keeps background behind text */
-}  
+    background-repeat: no-repeat;
+    z-index: -2;
+}
 
 .content {
     display: flex;
