--- a/main.css
+++ b/main.css
@@ -73,7 +73,7 @@ p {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('./benji_bg.png');
+    background-image: url('img/benji_bg.png');
     background-size: auto 100%; /* 이미지의 비율 유지 */
     background-position: right;
     background-repeat: no-repeat;
