--- a/main.css
+++ b/main.css
@@ -1,9 +1,46 @@
+/* @font-face {
+    font-family: 'CMU serif';
+    src: url('fonts/cmunrm.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+} */
+
+/* @font-face {
+    font-family: 'CMU serif';
+    src: url('fonts/cmunrm.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+} */
+
+@font-face {
+    font-family: 'IPAex Mincho';
+    src: url('fonts/IPAexMincho.woff2') format('woff2'),
+        url('fonts/IPAexMincho.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+/* @font-face {
+    font-family: 'IPAex Mincho';
+    src: url('fonts/ipaexm.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+} */
+
+@font-face {
+    font-family: 'IPAex Gothic';
+    src: url('fonts/ipaexg.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     margin: 0;
     padding: 0;
     display: flex;
     height: 100vh;
-    font-family: Crimson Text, 'Sawarabi Mincho', sans-serif;
+    font-family: 'CMU Serif', 'IPAex Mincho', sans-serif;
 }
 
 header {
