--- a/wrapper.css
+++ b/wrapper.css
@@ -1,6 +1,7 @@
   body, html, h1, ul, li {
     margin: 0;
     padding: 0;
+    font-size: 1.1rem;
   }
 
   /* @font-face {
@@ -44,7 +45,9 @@
   }
   
   ul {
-    list-style: none;
+    /* list-style: none; */
+    list-style-type: circle; /* Sets the bullet style to 'disc' */
+    margin-left: 20px;     /* Adds left margin for better alignment */
     padding: 0 1em;
   }
   
