--- a/juhee/juhee.css
+++ b/juhee/juhee.css
@@ -176,6 +176,66 @@ a {
     overflow-wrap: break-word;
 }
 
+.qr-button {
+    background-color: orangered;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.qr-button:hover {
+    background-color: brown;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup {
+    position: relative;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.popup img {
+    width: 600px;
+    height: 600px;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: white;
+    color: #3D3332;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.close-btn:hover {
+    background-color: orangered;
+}
+
 .hamburger {
     display: none;
     flex-direction: column;
@@ -253,7 +313,12 @@ a {
     .menu li a {
         font-size: 2.0rem;
         padding: 15px 20px;
-      }
+    }
+
+    .popup img {
+        width: 400px;
+        height: 400px;
+    }
 
     p {
         font-size: 2.0rem;
