--- a/juhee/juhee.css
+++ b/juhee/juhee.css
@@ -48,6 +48,21 @@ p {
     margin-right: 20px;
 }
 
+ul.no-bullets {
+    list-style-type: none;
+    padding-left: 20px;
+}
+
+li {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
 .icon-container {
     display: flex;
     justify-content: flex-end;
@@ -75,7 +90,7 @@ p {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('./img/sop.jpg');
+    background-image: url('./img/juhee.png');
     background-size: auto 100%;
     background-position: right;
     background-repeat: no-repeat;
@@ -150,21 +165,6 @@ p {
        -1.0px -1.0px 0 #3D3332, 
         1.0px -1.0px 0 #3D3332, 
        -1.0px  1.0px 0 #3D3332;
-}
-
-ul.no-bullets {
-    list-style-type: none;
-    padding-left: 20px;
-}
-
-li {
-    font-size: 1.2rem;
-    margin-bottom: 10px;
-}
-
-a {
-    color: white;
-    text-decoration: none;
 }
 
 .word-break {
