--- a/main.css
+++ b/main.css
@@ -297,7 +297,7 @@ a {
     position: absolute;
     top: 0;
     right: 0;
-    width: 500px;
+    /* width: 500px; */
     height: 100%;
     justify-content: flex-end;
     align-items: center;
