--- a/juhee/juhee.css
+++ b/juhee/juhee.css
@@ -29,13 +29,15 @@ header {
 main {
     flex: 1;
     padding: 20px;
+    padding-top: 80px;
+    padding-bottom: 80px;
     color: white;
 }
 
 footer {
     opacity: 80%;
     color: white;
-    padding: 10px;
+    padding: 20px;
     position: fixed;
     width: 95%;
     bottom: 0;
