--- a/main.css
+++ b/main.css
@@ -46,12 +46,14 @@ main {
     flex: 1;
     padding: 20px;
     color: black;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 
 footer {
     opacity: 80%;
     color: black;
-    padding: 10px;
+    padding: 20px;
     position: fixed;
     width: 95%;
     bottom: 0;
