--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Crimson Pro';
-    src: url('fonts/CrimsonPro-VariableFont_wght.ttf') format('truetype');
+    src: url('../fonts/CrimsonPro-VariableFont_wght.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'Noto Serif JP';
-    src: url('fonts/NotoSerifJP-VariableFont_wght.ttf') format('truetype');
+    src: url('../fonts/NotoSerifJP-VariableFont_wght.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -16,8 +16,8 @@
 
 @font-face {
     font-family: 'IPAex Mincho';
-    src: url('fonts/IPAexMincho.woff2') format('woff2'),
-         url('fonts/IPAexMincho.woff')  format('woff');
+    src: url('../fonts/IPAexMincho.woff2') format('woff2'),
+         url('../fonts/IPAexMincho.woff')  format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
