--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,7 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('img/benji_bg2.png');
+    background-image: url('../img/benji_bg2.png');
     background-size: auto 100%;
     background-position: right;
     background-repeat: no-repeat;
