--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ footer {
 }
 
 p {
+    text-indent: 20px;
     font-size: 1.2rem;
     margin-top: 20px;
     margin-right: 20px;
@@ -372,6 +373,7 @@ a {
     }    
 
     p {
+        text-indent: 20px;
         font-size: 2.0rem;
         margin-top: 20px;
         margin-right: 20px;
