--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+:root{
+  --header-h: 80px; /* desktop-ish default */
+}
+
 @font-face {
     font-family: 'Crimson Pro';
     src: url('../fonts/CrimsonPro-VariableFont_wght.ttf') format('truetype');
@@ -23,6 +27,10 @@
     font-display: swap;
 }
 
+html{
+    scroll-padding-top: var(--header-h);
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -32,7 +40,9 @@ body {
 }
 
 header {
-    width: 90%;
+    width: 100%;
+    left: 0;
+    top: 0;
     opacity: 1;
     background: rgba(255,255,255,0.8);
     color: black;
@@ -41,13 +51,16 @@ header {
     display: flex;
     justify-content: flex-end;
     z-index: 1000;
+    min-height: var(--header-h);
+    box-sizing: border-box;
 }
 
 main {
     flex: 1;
     padding: 20px;
     color: black;
-    padding-top: 80px;
+    /* padding-top: 80px; */
+    padding-top: calc(var(--header-h) + 20px);
     padding-bottom: 80px;
 }
 
@@ -424,6 +437,10 @@ code {
 }
 
 @media (max-width: 1280px) {
+  :root{ 
+    --header-h: 100px; 
+  } /* mobile header height: tune if needed */
+
   .hamburger {
     display: flex;
   }
