--- a/css/50_menu_hamburger.css
+++ b/css/50_menu_hamburger.css
@@ -37,5 +37,7 @@
 }
 
 .menu li:hover {
-  background-color: orangered;
+    /* background-color: orangered; */
+    transform: translate(5px, 5px);
+    cursor: pointer;
 }
