--- a/css/40_icons_buttons_overlays.css
+++ b/css/40_icons_buttons_overlays.css
@@ -94,15 +94,15 @@
 }
 
 .popup img {
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
 }
 
 .close-btn {
   position: absolute;
   top: 10px;
   right: 10px;
-  background-color: #ff4d4d;
+  background-color: forestgreen;
   color: white;
   border: none;
   border-radius: 50%;
@@ -116,5 +116,5 @@
 }
 
 .close-btn:hover {
-  background-color: #ff0000;
+  background-color: mediumseagreen;
 }
